Add comments on critical redshift notebook

--- a/examples/redshift_cutoff/critical_redshift.ipynb
+++ b/examples/redshift_cutoff/critical_redshift.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,13 +30,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "density = 1e-9\n",
-    "uni = TransientUniverse('SC', 'MD2014SFR', density, 1.01e-8, 2.19, data_years=8.6)"
+    "# Investigating a redshift cutoff\n",
+    "\n",
+    "We have some problems with memory consumption when using FIRESONG and looking at populations of sources with high densities. Markus Ahlers suggested placing a cut on redshift to not need to simulate as many sources.\n",
+    "\n",
+    "Below, we investigate how many alert events (and therefore sources for our analysis) we would lose by placing a redshift cut. TL;DR: the redshift cut would only save a factor of ~2 in memory before cutting out about 10% of the sources, so it's not worth it to us"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simulate the sources\n",
+    "\n",
+    "First, we simulate a population of sources and show the distribution as a function of redshift for all of the sources (blue) vs. those that yield an alert event (green)"
    ]
   },
   {
@@ -75,21 +85,25 @@
     "uni.create_universe()\n",
     "plt.hist(uni.sources['z'], bins=z_bins, histtype='stepfilled', \n",
     "         density=False, lw=2., alpha=0.5, label='All sources', color = sns.xkcd_rgb['light navy blue'])\n",
-    "print(np.percentile(uni.sources['z'], [5., 25., 50., 75., 95.]))\n",
+    "\n",
     "uni.find_alerts()\n",
     "plt.hist(uni.sources['z'], bins=z_bins, histtype='stepfilled', density=False, lw=2.,\n",
     "        alpha=0.9, label='Sources that give alerts', color = sns.xkcd_rgb['light forest green'])\n",
-    "print(np.percentile(uni.sources['z'], [5., 25., 50., 75., 95.]))\n",
     "\n",
     "plt.yscale('log')\n",
     "plt.xlabel(r'$z$')\n",
     "plt.ylabel('Number of sources')\n",
     "plt.legend(loc=1)\n",
-    "plt.show()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculate as a function of density\n",
     "\n",
-    "\n",
-    "# plt.hist(uni.sources['z'], bins=z_bins)\n",
-    "# plt.hist(uni.sources['z'][uni.kept_inds], bins=z_bins)"
+    "Now, for different densities, we repeat the process above"
    ]
   },
   {
@@ -114,7 +128,6 @@
     "alert_sources_redshifts = []\n",
     "\n",
     "for density in densities:\n",
-    "    print density,\n",
     "    uni = TransientUniverse('SC', 'MD2014SFR', density, 1.5e-8, 2.50, data_years=8.6)\n",
     "    all_sources_redshifts.append([])\n",
     "    alert_sources_redshifts.append([])\n",
@@ -194,6 +207,15 @@
     "    plt.legend(loc=1, frameon=True)\n",
     "\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The plots above show the central 68% and 95% containment of the redshift distributions as a function of density. If we are willing to sacrifice 5% of our signal (alert events), that corresponds to placing a cut at the redshift of ~2.5, where the light green distribution cuts off. Looking at where that falls in the all source distribution, it is where the median falls, meaning we would save a factor of 2 in the number of sources we need to simulate (and therefore in memory)\n",
+    "\n",
+    "However, the memory problems we run into are more sever than that, we need to save a factor of ~10 in memory. As we are already cutting into our signal significantly with a factor of 2 in memory, this does not seem worth it to us"
    ]
   },
   {
